--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>e-editiones</title>
     <meta name="description" content="I am writing about my experiences as a naval navel-gazer.">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/prism-base16-monokai.dark.css">
-    <link rel="stylesheet" href="/css/prism-diff.css">
-    <link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="e-editiones">
-    <link rel="alternate" href="/feed/feed.json" type="application/json" title="e-editiones">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="/11ty-homepage/css/index.css">
+    <link rel="stylesheet" href="/11ty-homepage/css/prism-base16-monokai.dark.css">
+    <link rel="stylesheet" href="/11ty-homepage/css/prism-diff.css">
+    <link rel="alternate" href="/11ty-homepage/feed/feed.xml" type="application/atom+xml" title="e-editiones">
+    <link rel="alternate" href="/11ty-homepage/feed/feed.json" type="application/json" title="e-editiones">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Nunito&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -21,7 +21,7 @@
 <header class="header-with-banner">
     <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="/img/e-editiones-logo-color.svg"></a>
+        <a class="navbar-brand" href="/11ty-homepage/"><img src="/img/e-editiones-logo-color.svg"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -71,16 +71,16 @@
   </thead>
   <tbody>
   <tr>
-    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
-    <td>Tagged “osa20”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
-    <td>Tagged “tei”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/tei-publisher/"><code>/tags/tei-publisher/</code></a></td>
     <td>Tagged “tei-publisher”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
+    <td>Tagged “awards”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
+    <td>Tagged “news”</td>
   </tr>
   <tr>
     <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
@@ -89,18 +89,6 @@
   <tr>
     <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
     <td>Tagged “ukraine”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
-    <td>Tagged “hugo”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/pb-component/"><code>/tags/pb-component/</code></a></td>
-    <td>Tagged “pb-component”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/wordpress/"><code>/tags/wordpress/</code></a></td>
-    <td>Tagged “wordpress”</td>
   </tr>
   <tr>
     <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
@@ -113,6 +101,18 @@
   <tr>
     <td><a href="/tags/verovio/"><code>/tags/verovio/</code></a></td>
     <td>Tagged “verovio”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
+    <td>Tagged “hugo”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/pb-component/"><code>/tags/pb-component/</code></a></td>
+    <td>Tagged “pb-component”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/wordpress/"><code>/tags/wordpress/</code></a></td>
+    <td>Tagged “wordpress”</td>
   </tr>
   <tr>
     <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
@@ -145,7 +145,7 @@
 
 <footer></footer>
 
-<!-- Current page: /page-list/2/ -->
+<!-- Current page: /11ty-homepage/page-list/2/ -->
 <!--script>
     document.addEventListener('DOMContentLoaded', function() {
     window.addEventListener('scroll', function() {
