--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -21,7 +21,7 @@
 <header class="header-with-banner">
     <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/11ty-homepage/"><img src="/img/e-editiones-logo-color.svg"></a>
+        <a class="navbar-brand" href="/11ty-homepage/"><img src="/11ty-homepage/img/e-editiones-logo-color.svg"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -139,16 +139,16 @@
     <td></td>
   </tr>
   <tr>
-    <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
-    <td>Tagged “interoperability”</td>
+    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
+    <td>Tagged “awards”</td>
   </tr>
   <tr>
-    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
-    <td>Tagged “osa20”</td>
+    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
+    <td>Tagged “news”</td>
   </tr>
   <tr>
-    <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
-    <td>Tagged “tei”</td>
+    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
+    <td>Tagged “annotations”</td>
   </tr>
   </tbody>
 </table>
