--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -21,7 +21,7 @@
 <header class="header-with-banner">
     <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/11ty-homepage/"><img src="/img/e-editiones-logo-color.svg"></a>
+        <a class="navbar-brand" href="/11ty-homepage/"><img src="/11ty-homepage/img/e-editiones-logo-color.svg"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -71,24 +71,24 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
+    <td>Tagged “release”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
+    <td>Tagged “tei”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
+    <td>Tagged “interoperability”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
+    <td>Tagged “osa20”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/tei-publisher/"><code>/tags/tei-publisher/</code></a></td>
     <td>Tagged “tei-publisher”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
-    <td>Tagged “awards”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
-    <td>Tagged “news”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
-    <td>Tagged “grants”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
-    <td>Tagged “ukraine”</td>
   </tr>
   <tr>
     <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
@@ -101,6 +101,14 @@
   <tr>
     <td><a href="/tags/verovio/"><code>/tags/verovio/</code></a></td>
     <td>Tagged “verovio”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
+    <td>Tagged “grants”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
+    <td>Tagged “ukraine”</td>
   </tr>
   <tr>
     <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
@@ -119,24 +127,16 @@
     <td>Tagged “open-api”</td>
   </tr>
   <tr>
-    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
-    <td>Tagged “release”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
-    <td>Tagged “annotations”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
-    <td>Tagged “meetup”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/semantic-encoding/"><code>/tags/semantic-encoding/</code></a></td>
     <td>Tagged “semantic-encoding”</td>
   </tr>
   <tr>
     <td><a href="/tags/vscode/"><code>/tags/vscode/</code></a></td>
     <td>Tagged “vscode”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
+    <td>Tagged “meetup”</td>
   </tr>
   </tbody>
 </table>
