--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -15,10 +15,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Nunito&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    
   </head>
   <body>
       
-<header class="header-with-banner">
+<script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
+
+<header>
     <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="/11ty-homepage/"><img src="/11ty-homepage/img/e-editiones-logo-color.svg"></a>
@@ -53,14 +56,15 @@
         </nav>
     </div>
 </nav>
-    <div class="banner">
+</header>
+<div class="banner" data-rellax-zindex="1" data-rellax-speed="-7">
+    <div>
         <div>
             <h1>Editions with Future</h1>
             <h2>Rooted in standards, built by a community, meant to last</h2>
         </div>
     </div>
-</header>
-
+</div>
 <main class="container home">
     <table>
   <thead>
@@ -91,18 +95,6 @@
     <td>Tagged “tei-publisher”</td>
   </tr>
   <tr>
-    <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
-    <td>Tagged “mei”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/pb-mei/"><code>/tags/pb-mei/</code></a></td>
-    <td>Tagged “pb-mei”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/verovio/"><code>/tags/verovio/</code></a></td>
-    <td>Tagged “verovio”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
     <td>Tagged “grants”</td>
   </tr>
@@ -123,8 +115,24 @@
     <td>Tagged “wordpress”</td>
   </tr>
   <tr>
+    <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
+    <td>Tagged “mei”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/pb-mei/"><code>/tags/pb-mei/</code></a></td>
+    <td>Tagged “pb-mei”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/verovio/"><code>/tags/verovio/</code></a></td>
+    <td>Tagged “verovio”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
     <td>Tagged “open-api”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
+    <td>Tagged “meetup”</td>
   </tr>
   <tr>
     <td><a href="/tags/semantic-encoding/"><code>/tags/semantic-encoding/</code></a></td>
@@ -134,10 +142,6 @@
     <td><a href="/tags/vscode/"><code>/tags/vscode/</code></a></td>
     <td>Tagged “vscode”</td>
   </tr>
-  <tr>
-    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
-    <td>Tagged “meetup”</td>
-  </tr>
   </tbody>
 </table>
 
@@ -145,19 +149,21 @@
 
 <footer></footer>
 
-<!-- Current page: /11ty-homepage/page-list/2/ -->
-<!--script>
+<script>
     document.addEventListener('DOMContentLoaded', function() {
-    window.addEventListener('scroll', function() {
-        const winTop = window.pageYOffset;
-        console.log('scrolling %s', winTop);
-        if (winTop > 30) {
-        document.body.classList.add('sticky');
-        } else {
-        document.body.classList.remove('sticky');
-        }
+        const main = document.querySelector('.banner');
+        const observer = new IntersectionObserver((entries) => {
+            if (!entries[0].isIntersecting) {
+                document.body.classList.remove('banner-visible');
+            } else {
+                document.body.classList.add('banner-visible');
+            }
+        }, { threshold: 0.7 });
+        observer.observe(main);
+
+        const rellax = new Rellax('.banner');
     });
-    });
-</script-->
+</script>
+<!-- Current page: /11ty-homepage/page-list/2/ -->
   </body>
 </html>
