deploy: 6ad169d26f4a48899bf7e1e37a9c4aab5a2a9b59

--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -33,25 +33,25 @@
             
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item">
-                <a href="/" class="nav-link">Home</a>
+                <a href="/11ty-homepage/" class="nav-link">Home</a>
             </li><li class="nav-item">
-                <a href="/pages/strategy/" class="nav-link">Strategy</a>
+                <a href="/11ty-homepage/pages/strategy/" class="nav-link">Strategy</a>
             </li><li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link"
                     data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Society</a>
                 <ul class="dropdown-menu"><li class="nav-item">
-                <a href="/pages/statuten-des-vereins-e-editiones-german/" class="nav-link">Statuten des Vereins e-editiones (German)</a>
+                <a href="/11ty-homepage/pages/statuten-des-vereins-e-editiones-german/" class="nav-link">Statuten des Vereins e-editiones (German)</a>
             </li><li class="nav-item">
-                <a href="/pages/meeting-minutes/" class="nav-link">Meeting Minutes</a>
+                <a href="/11ty-homepage/pages/meeting-minutes/" class="nav-link">Meeting Minutes</a>
             </li><li class="nav-item">
-                <a href="/pages/board/" class="nav-link">Board</a>
+                <a href="/11ty-homepage/pages/board/" class="nav-link">Board</a>
             </li><li class="nav-item">
-                <a href="/pages/members/" class="nav-link">Members</a>
+                <a href="/11ty-homepage/pages/members/" class="nav-link">Members</a>
             </li><li class="nav-item">
-                <a href="/pages/how-to-become-a-member/" class="nav-link">How to become a member</a>
+                <a href="/11ty-homepage/pages/how-to-become-a-member/" class="nav-link">How to become a member</a>
             </li></ul>
             </li><li class="nav-item">
-                <a href="/posts/" class="nav-link">Archive</a>
+                <a href="/11ty-homepage/posts/" class="nav-link">Archive</a>
             </li></ul>
         </nav>
     </div>
@@ -75,32 +75,8 @@
   </thead>
   <tbody>
   <tr>
-    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
-    <td>Tagged “release”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
-    <td>Tagged “tei”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
-    <td>Tagged “interoperability”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
-    <td>Tagged “osa20”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/tei-publisher/"><code>/tags/tei-publisher/</code></a></td>
     <td>Tagged “tei-publisher”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
-    <td>Tagged “grants”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
-    <td>Tagged “ukraine”</td>
   </tr>
   <tr>
     <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
@@ -113,6 +89,18 @@
   <tr>
     <td><a href="/tags/wordpress/"><code>/tags/wordpress/</code></a></td>
     <td>Tagged “wordpress”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
+    <td>Tagged “grants”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
+    <td>Tagged “news”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
+    <td>Tagged “ukraine”</td>
   </tr>
   <tr>
     <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
@@ -129,6 +117,18 @@
   <tr>
     <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
     <td>Tagged “open-api”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
+    <td>Tagged “release”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
+    <td>Tagged “awards”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
+    <td>Tagged “annotations”</td>
   </tr>
   <tr>
     <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
