--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -33,25 +33,25 @@
             
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item">
-                <a href="/" class="nav-link">Home</a>
+                <a href="/11ty-homepage/" class="nav-link">Home</a>
             </li><li class="nav-item">
-                <a href="/pages/strategy/" class="nav-link">Strategy</a>
+                <a href="/11ty-homepage/pages/strategy/" class="nav-link">Strategy</a>
             </li><li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link"
                     data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Society</a>
                 <ul class="dropdown-menu"><li class="nav-item">
-                <a href="/pages/statuten-des-vereins-e-editiones-german/" class="nav-link">Statuten des Vereins e-editiones (German)</a>
+                <a href="/11ty-homepage/pages/statuten-des-vereins-e-editiones-german/" class="nav-link">Statuten des Vereins e-editiones (German)</a>
             </li><li class="nav-item">
-                <a href="/pages/meeting-minutes/" class="nav-link">Meeting Minutes</a>
+                <a href="/11ty-homepage/pages/meeting-minutes/" class="nav-link">Meeting Minutes</a>
             </li><li class="nav-item">
-                <a href="/pages/board/" class="nav-link">Board</a>
+                <a href="/11ty-homepage/pages/board/" class="nav-link">Board</a>
             </li><li class="nav-item">
-                <a href="/pages/members/" class="nav-link">Members</a>
+                <a href="/11ty-homepage/pages/members/" class="nav-link">Members</a>
             </li><li class="nav-item">
-                <a href="/pages/how-to-become-a-member/" class="nav-link">How to become a member</a>
+                <a href="/11ty-homepage/pages/how-to-become-a-member/" class="nav-link">How to become a member</a>
             </li></ul>
             </li><li class="nav-item">
-                <a href="/posts/" class="nav-link">Archive</a>
+                <a href="/11ty-homepage/posts/" class="nav-link">Archive</a>
             </li></ul>
         </nav>
     </div>
@@ -143,16 +143,16 @@
     <td></td>
   </tr>
   <tr>
-    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
-    <td>Tagged “awards”</td>
+    <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
+    <td>Tagged “interoperability”</td>
   </tr>
   <tr>
-    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
-    <td>Tagged “news”</td>
+    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
+    <td>Tagged “osa20”</td>
   </tr>
   <tr>
-    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
-    <td>Tagged “annotations”</td>
+    <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
+    <td>Tagged “tei”</td>
   </tr>
   </tbody>
 </table>
