deploy: 231e2a6bcda3e774d347724d80aed9635101e292

--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -143,12 +143,12 @@
     <td></td>
   </tr>
   <tr>
-    <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
-    <td>Tagged “interoperability”</td>
+    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
+    <td>Tagged “annotations”</td>
   </tr>
   <tr>
-    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
-    <td>Tagged “osa20”</td>
+    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
+    <td>Tagged “release”</td>
   </tr>
   <tr>
     <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
