--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -75,8 +75,32 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
+    <td>Tagged “awards”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
+    <td>Tagged “news”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
+    <td>Tagged “interoperability”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
+    <td>Tagged “osa20”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/tei-publisher/"><code>/tags/tei-publisher/</code></a></td>
     <td>Tagged “tei-publisher”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
+    <td>Tagged “grants”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
+    <td>Tagged “ukraine”</td>
   </tr>
   <tr>
     <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
@@ -89,18 +113,6 @@
   <tr>
     <td><a href="/tags/wordpress/"><code>/tags/wordpress/</code></a></td>
     <td>Tagged “wordpress”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
-    <td>Tagged “grants”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
-    <td>Tagged “news”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
-    <td>Tagged “ukraine”</td>
   </tr>
   <tr>
     <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
@@ -119,28 +131,16 @@
     <td>Tagged “open-api”</td>
   </tr>
   <tr>
-    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
-    <td>Tagged “release”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
-    <td>Tagged “awards”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
-    <td>Tagged “annotations”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
-    <td>Tagged “meetup”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/semantic-encoding/"><code>/tags/semantic-encoding/</code></a></td>
     <td>Tagged “semantic-encoding”</td>
   </tr>
   <tr>
     <td><a href="/tags/vscode/"><code>/tags/vscode/</code></a></td>
     <td>Tagged “vscode”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
+    <td>Tagged “meetup”</td>
   </tr>
   </tbody>
 </table>
