deploy: 6fe0eca4989e5354c45f823cda4ea3121c24885f

--- a/pages/community-meetings/index.html
+++ b/pages/community-meetings/index.html
@@ -88,12 +88,12 @@
 <li>TEI Publisher-based application with an extended API to publish and query the  data,</li>
 <li>Fore XForms to edit the data.</li>
 </ul>
-<p><img src="images/ling-1024x607.png" alt=""></p>
+<p><img src="/img/ling-1024x607.png" alt=""></p>
 <h5>2022-02-01 Tutorial: Connecting components to custom API endpoints</h5>
 <p>Wolfgang Meier</p>
 <p>This will be a tutorial session demonstrating  a new component for displaying categorized lists, e.g. to browse through people or places and paginate the results by first letter of alphabet, country or other categories. We'll learn how to connect this component to the API by creating a custom endpoint.</p>
 <p>We'll also look at an enhanced version of the map component to display all places mentioned in an edition in a clustered view.</p>
-<p><img src="images/Bildschirmfoto-2022-01-27-um-11.52.36.png" alt=""></p>
+<p><img src="/img/Bildschirmfoto-2022-01-27-um-11.52.36.png" alt=""></p>
 <h4 id="2021" tabindex="-1">2021 <a class="direct-link" href="#2021" aria-hidden="true">#</a></h4>
 <h5>2021-12-07 Combined Workflow for Publishing Jurisprudentia Frisica</h5>
 <p>Eduard Drenth, Fryske Akademy</p>
