--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -70,7 +70,7 @@
 </ul>
 <p>A more detailed description can be found in our <a href="strategy" title="strategy paper">strategy paper</a>.</p>
 <p>If you would like to <a href="how-to-become-a-member" title="become a member">become a member</a> of e-editiones, don’t hesitate to contact us: <a href="mailto:info@e-editiones.org">info@e-editiones.org</a>, check out our <a href="/workshops" title="workshops">workshops</a> and <a href="/community-meetings/" title="community events">community events</a>, and <a href="/get-in-touch/" title="get in touch">get in touch</a> with others.</p>
-<p><img src="images/pixel.gif" alt=""></p>
+<p><img src="/img/pixel.gif" alt=""></p>
 
 </main>
 
