--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -63,6 +63,14 @@
             <h1>Editions with Future</h1>
             <h2>Rooted in standards, built by a community, meant to last</h2>
         </div>
+        <div class="intro-text">
+            <p>e-editiones is an international non profit society consisting of owners 
+            of smaller and larger edition projects, cultural heritage institutions, 
+            and individual researchers. Its goal is to empower digital editions of 
+            cultural, scientific, and artistic works by promoting open standards 
+            related to digital editions and advancing open source applications based on them.</p>
+            <a href="pages/home">Read more</a>
+        </div>
     </div>
 </div>
 <main class="container home">
@@ -75,20 +83,12 @@
   </thead>
   <tbody>
   <tr>
-    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
-    <td>Tagged “awards”</td>
+    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
+    <td>Tagged “release”</td>
   </tr>
   <tr>
-    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
-    <td>Tagged “news”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
-    <td>Tagged “grants”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
-    <td>Tagged “ukraine”</td>
+    <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
+    <td>Tagged “tei”</td>
   </tr>
   <tr>
     <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
@@ -101,6 +101,14 @@
   <tr>
     <td><a href="/tags/tei-publisher/"><code>/tags/tei-publisher/</code></a></td>
     <td>Tagged “tei-publisher”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
+    <td>Tagged “grants”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
+    <td>Tagged “ukraine”</td>
   </tr>
   <tr>
     <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
