deploy: 98abbc1994b577ab48d8cb80b888c192e47d7ab3

--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -159,8 +159,8 @@
     <td>Tagged “news”</td>
   </tr>
   <tr>
-    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
-    <td>Tagged “annotations”</td>
+    <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
+    <td>Tagged “interoperability”</td>
   </tr>
   </tbody>
 </table>
