--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -83,20 +83,12 @@
   </thead>
   <tbody>
   <tr>
-    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
-    <td>Tagged “release”</td>
+    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
+    <td>Tagged “osa20”</td>
   </tr>
   <tr>
     <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
     <td>Tagged “tei”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
-    <td>Tagged “interoperability”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
-    <td>Tagged “osa20”</td>
   </tr>
   <tr>
     <td><a href="/tags/tei-publisher/"><code>/tags/tei-publisher/</code></a></td>
@@ -137,6 +129,14 @@
   <tr>
     <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
     <td>Tagged “open-api”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
+    <td>Tagged “release”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
+    <td>Tagged “annotations”</td>
   </tr>
   <tr>
     <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
