deploy: 9ce54a6dab9c35b910304edbbb8bcfc45f6a02b0

--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -63,14 +63,6 @@
             <h1>Editions with Future</h1>
             <h2>Rooted in standards, built by a community, meant to last</h2>
         </div>
-        <div class="intro-text">
-            <p>e-editiones is an international non profit society consisting of owners 
-            of smaller and larger edition projects, cultural heritage institutions, 
-            and individual researchers. Its goal is to empower digital editions of 
-            cultural, scientific, and artistic works by promoting open standards 
-            related to digital editions and advancing open source applications based on them.</p>
-            <a href="pages/home">Read more</a>
-        </div>
     </div>
 </div>
 <main class="container home">
@@ -151,16 +143,16 @@
     <td></td>
   </tr>
   <tr>
-    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
-    <td>Tagged “awards”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
-    <td>Tagged “news”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
     <td>Tagged “interoperability”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
+    <td>Tagged “osa20”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
+    <td>Tagged “tei”</td>
   </tr>
   </tbody>
 </table>
