--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -63,14 +63,6 @@
             <h1>Editions with Future</h1>
             <h2>Rooted in standards, built by a community, meant to last</h2>
         </div>
-        <div class="intro-text">
-            <p>e-editiones is an international non profit society consisting of owners 
-            of smaller and larger edition projects, cultural heritage institutions, 
-            and individual researchers. Its goal is to empower digital editions of 
-            cultural, scientific, and artistic works by promoting open standards 
-            related to digital editions and advancing open source applications based on them.</p>
-            <a href="pages/home">Read more</a>
-        </div>
     </div>
 </div>
 <main class="container home">
@@ -83,16 +75,24 @@
   </thead>
   <tbody>
   <tr>
-    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
-    <td>Tagged “osa20”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
-    <td>Tagged “tei”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/tei-publisher/"><code>/tags/tei-publisher/</code></a></td>
     <td>Tagged “tei-publisher”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
+    <td>Tagged “awards”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
+    <td>Tagged “news”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
+    <td>Tagged “annotations”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
+    <td>Tagged “release”</td>
   </tr>
   <tr>
     <td><a href="/tags/grants/"><code>/tags/grants/</code></a></td>
@@ -129,14 +129,6 @@
   <tr>
     <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
     <td>Tagged “open-api”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
-    <td>Tagged “release”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
-    <td>Tagged “annotations”</td>
   </tr>
   <tr>
     <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
