--- a/index.html
+++ b/index.html
@@ -63,24 +63,31 @@
             <h1>Editions with Future</h1>
             <h2>Rooted in standards, built by a community, meant to last</h2>
         </div>
-        <div class="intro-text">
-            <p>e-editiones is an international non profit society consisting of owners 
-            of smaller and larger edition projects, cultural heritage institutions, 
-            and individual researchers. Its goal is to empower digital editions of 
-            cultural, scientific, and artistic works by promoting open standards 
-            related to digital editions and advancing open source applications based on them.</p>
-            <a href="pages/home">Read more</a>
-        </div>
     </div>
 </div>
 <main class="container home">
     
+<div class="intro-text">
+    <p>e-editiones is an international non profit society consisting of owners 
+    of smaller and larger edition projects, cultural heritage institutions, 
+    and individual researchers. Its goal is to empower digital editions of 
+    cultural, scientific, and artistic works by promoting open standards 
+    related to digital editions and advancing open source applications based on them.</p>
+    <h4>More information:</h4>
+    <ul>
+        <li><a href="pages/home/">for researchers ...</a></li>
+        <li><a href="pages/home/">for memory institutions ...</a></li>
+        <li><a href="pages/home/">for libraries ...</a></li>
+    </ul>
+</div>
 
-<h1>Latest 9 Posts</h1>
+<section class="blog">
+  
+  <h1>Latest 9 Posts</h1>
 
-
-
-<div class="posts">
+  
+  
+  <div class="posts">
   
     <div class="card ">
       
@@ -246,6 +253,7 @@
     </div>
   
 </div>
+</section>
 </main>
 
 <footer></footer>
