deploy: fa3be565f91c6d42acd2af3c18ea25f07ca774d3

--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -34,12 +34,26 @@
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item">
                 <a href="/11ty-homepage/" class="nav-link">Home</a>
+            </li><li class="nav-item dropdown">
+                <a class="dropdown-toggle nav-link"
+                    data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
+                <ul class="dropdown-menu"><li class="nav-item">
+                <a href="/11ty-homepage/pages/getting-started/" class="nav-link">Getting Started</a>
             </li><li class="nav-item">
-                <a href="/11ty-homepage/pages/strategy/" class="nav-link">Strategy</a>
+                <a href="/11ty-homepage/pages/get-in-touch/" class="nav-link">Get in Touch</a>
+            </li><li class="nav-item">
+                <a href="/11ty-homepage/pages/how-to-contribute/" class="nav-link">How to Contribute</a>
+            </li><li class="nav-item">
+                <a href="/11ty-homepage/pages/community-meetings/" class="nav-link">Community Meetings</a>
+            </li><li class="nav-item">
+                <a href="/11ty-homepage/pages/workshops/" class="nav-link">Workshops</a>
+            </li></ul>
             </li><li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link"
                     data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Society</a>
                 <ul class="dropdown-menu"><li class="nav-item">
+                <a href="/11ty-homepage/pages/strategy/" class="nav-link">Strategy</a>
+            </li><li class="nav-item">
                 <a href="/11ty-homepage/pages/statuten-des-vereins-e-editiones-german/" class="nav-link">Statuten des Vereins e-editiones (German)</a>
             </li><li class="nav-item">
                 <a href="/11ty-homepage/pages/meeting-minutes/" class="nav-link">Meeting Minutes</a>
@@ -61,7 +75,25 @@
     <div>
         <div>
             <h1>Editions with Future</h1>
-            <h2>Rooted in standards, built by a community, meant to last</h2>
+            <h2>rooted in standards, built by a community, meant to last</h2>
+            <div>
+                <button class="btn btn-warning">Donate</button>
+                <button class="btn btn-warning">Join</button>
+            </div>
+            <div class="intro-text">
+                <div>
+                    <p><strong>International non profit society</strong> gathering 
+                    edition projects, cultural heritage institutions, 
+                    and individuals<br/><strong>Empower</strong> digital projects by promoting 
+                    <strong>open standards</strong> and <strong>community collaboration</strong>.</p>
+                    <ul>
+                        <li><a href="pages/home/">researchers ...</a></li>
+                        <li><a href="pages/home/">memory institutions ...</a></li>
+                        <li><a href="pages/home/">libraries ...</a></li>
+                        <li><a href="pages/home/">developers ...</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -74,6 +106,10 @@
     </tr>
   </thead>
   <tbody>
+  <tr>
+    <td><a href="/posts/roaster-an-open-api-router-for-exist/"><code>/posts/roaster-an-open-api-router-for-exist/</code></a></td>
+    <td>Roaster: an Open API Router for eXist</td>
+  </tr>
   <tr>
     <td><a href="/posts/newsletter-2021-1/"><code>/posts/newsletter-2021-1/</code></a></td>
     <td>Newsletter 2021/1</td>
@@ -143,16 +179,12 @@
     <td></td>
   </tr>
   <tr>
-    <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
-    <td>Tagged “interoperability”</td>
+    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
+    <td>Tagged “annotations”</td>
   </tr>
   <tr>
-    <td><a href="/tags/osa20/"><code>/tags/osa20/</code></a></td>
-    <td>Tagged “osa20”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/tei/"><code>/tags/tei/</code></a></td>
-    <td>Tagged “tei”</td>
+    <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
+    <td>Tagged “release”</td>
   </tr>
   </tbody>
 </table>
