--- a/pages/getting-started/index.html
+++ b/pages/getting-started/index.html
@@ -32,12 +32,26 @@
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item">
                 <a href="/11ty-homepage/" class="nav-link">Home</a>
+            </li><li class="nav-item dropdown">
+                <a class="dropdown-toggle nav-link"
+                    data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
+                <ul class="dropdown-menu"><li class="nav-item">
+                <a href="/11ty-homepage/pages/getting-started/" class="nav-link active">Getting Started</a>
             </li><li class="nav-item">
-                <a href="/11ty-homepage/pages/strategy/" class="nav-link">Strategy</a>
+                <a href="/11ty-homepage/pages/get-in-touch/" class="nav-link">Get in Touch</a>
+            </li><li class="nav-item">
+                <a href="/11ty-homepage/pages/how-to-contribute/" class="nav-link">How to Contribute</a>
+            </li><li class="nav-item">
+                <a href="/11ty-homepage/pages/community-meetings/" class="nav-link">Community Meetings</a>
+            </li><li class="nav-item">
+                <a href="/11ty-homepage/pages/workshops/" class="nav-link">Workshops</a>
+            </li></ul>
             </li><li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link"
                     data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Society</a>
                 <ul class="dropdown-menu"><li class="nav-item">
+                <a href="/11ty-homepage/pages/strategy/" class="nav-link">Strategy</a>
+            </li><li class="nav-item">
                 <a href="/11ty-homepage/pages/statuten-des-vereins-e-editiones-german/" class="nav-link">Statuten des Vereins e-editiones (German)</a>
             </li><li class="nav-item">
                 <a href="/11ty-homepage/pages/meeting-minutes/" class="nav-link">Meeting Minutes</a>
