--- a/index.html
+++ b/index.html
@@ -34,12 +34,26 @@
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item">
                 <a href="/11ty-homepage/" class="nav-link active">Home</a>
+            </li><li class="nav-item dropdown">
+                <a class="dropdown-toggle nav-link"
+                    data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
+                <ul class="dropdown-menu"><li class="nav-item">
+                <a href="/11ty-homepage/pages/getting-started/" class="nav-link">Getting Started</a>
             </li><li class="nav-item">
-                <a href="/11ty-homepage/pages/strategy/" class="nav-link">Strategy</a>
+                <a href="/11ty-homepage/pages/get-in-touch/" class="nav-link">Get in Touch</a>
+            </li><li class="nav-item">
+                <a href="/11ty-homepage/pages/how-to-contribute/" class="nav-link">How to Contribute</a>
+            </li><li class="nav-item">
+                <a href="/11ty-homepage/pages/community-meetings/" class="nav-link">Community Meetings</a>
+            </li><li class="nav-item">
+                <a href="/11ty-homepage/pages/workshops/" class="nav-link">Workshops</a>
+            </li></ul>
             </li><li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link"
                     data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Society</a>
                 <ul class="dropdown-menu"><li class="nav-item">
+                <a href="/11ty-homepage/pages/strategy/" class="nav-link">Strategy</a>
+            </li><li class="nav-item">
                 <a href="/11ty-homepage/pages/statuten-des-vereins-e-editiones-german/" class="nav-link">Statuten des Vereins e-editiones (German)</a>
             </li><li class="nav-item">
                 <a href="/11ty-homepage/pages/meeting-minutes/" class="nav-link">Meeting Minutes</a>
@@ -61,26 +75,30 @@
     <div>
         <div>
             <h1>Editions with Future</h1>
-            <h2>Rooted in standards, built by a community, meant to last</h2>
+            <h2>rooted in standards, built by a community, meant to last</h2>
+            <div>
+                <button class="btn btn-warning">Donate</button>
+                <button class="btn btn-warning">Join</button>
+            </div>
+            <div class="intro-text">
+                <div>
+                    <p><strong>International non profit society</strong> gathering 
+                    edition projects, cultural heritage institutions, 
+                    and individuals<br/><strong>Empower</strong> digital projects by promoting 
+                    <strong>open standards</strong> and <strong>community collaboration</strong>.</p>
+                    <ul>
+                        <li><a href="pages/home/">researchers ...</a></li>
+                        <li><a href="pages/home/">memory institutions ...</a></li>
+                        <li><a href="pages/home/">libraries ...</a></li>
+                        <li><a href="pages/home/">developers ...</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <main class="container home">
     
-<div class="intro-text">
-    <p>e-editiones is an international non profit society consisting of owners 
-    of smaller and larger edition projects, cultural heritage institutions, 
-    and individual researchers. Its goal is to empower digital editions of 
-    cultural, scientific, and artistic works by promoting open standards 
-    related to digital editions and advancing open source applications based on them.</p>
-    <h4>More information:</h4>
-    <ul>
-        <li><a href="pages/home/">for researchers ...</a></li>
-        <li><a href="pages/home/">for memory institutions ...</a></li>
-        <li><a href="pages/home/">for libraries ...</a></li>
-    </ul>
-</div>
-
 <section class="blog">
   
   <h1>Latest 9 Posts</h1>
