--- a/pages/community/index.html
+++ b/pages/community/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEI Publisher Registry</title>
+    <title>Community</title>
     <meta name="description" content="I am writing about my experiences as a naval navel-gazer.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="/11ty-homepage/css/index.css">
@@ -33,7 +33,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item">
                 <a href="/11ty-homepage/" class="nav-link">Home</a>
             </li><li class="nav-item dropdown">
-                <a class="dropdown-toggle nav-link"
+                <a class="dropdown-toggle nav-link active"
                     data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
                 <ul class="dropdown-menu"><li class="nav-item">
                 <a href="/11ty-homepage/pages/getting-started/" class="nav-link">Getting Started</a>
@@ -71,15 +71,13 @@
 </header>
 
 <main class="container ">
-    <h1>TEI Publisher Registry</h1>
-    <p>If your are using TEI Publisher, please let us know. Send us the title of your edition, a postal address, url, email and a very short description: <a href="mailto:info@e-editiones.org">info@e-editiones.org</a>.</p>
-<p>[put_wpgm id=2]</p>
-
+    <h1>Community</h1>
+    
 </main>
 
 <footer></footer>
 
-<!-- Current page: /11ty-homepage/pages/map/ -->
+<!-- Current page: /11ty-homepage/pages/community/ -->
 <!--script>
     document.addEventListener('DOMContentLoaded', function() {
     window.addEventListener('scroll', function() {
