deploy: cfe09838aaea2b3e9a35e5949d7fccaf4661acba

--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -13,7 +13,7 @@
     <link rel="alternate" href="/11ty-homepage/feed/feed.json" type="application/json" title="e-editiones">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300;1,400&family=Zilla+Slab:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     
   </head>
@@ -73,31 +73,79 @@
 </header>
 <div class="banner" data-rellax-zindex="1" data-rellax-speed="-7">
     <div>
-        <div>
-            <h1>Editions with Future</h1>
-            <h2>rooted in standards, built by a community, meant to last</h2>
+        <div class="hero">
+            <h1><span class="initial">e</span>ditions with <span class="initial">f</span>uture</h1>
+            <p>rooted in standards, built by a community, meant to last</p>
             <div>
                 <button class="btn btn-warning">Donate</button>
                 <button class="btn btn-warning">Join</button>
             </div>
-            <div class="intro-text">
-                <div>
-                    <p><strong>International non profit society</strong> gathering 
-                    edition projects, cultural heritage institutions, 
-                    and individuals<br/><strong>Empower</strong> digital projects by promoting 
-                    <strong>open standards</strong> and <strong>community collaboration</strong>.</p>
-                    <ul>
-                        <li><a href="pages/home/">researchers ...</a></li>
-                        <li><a href="pages/home/">memory institutions ...</a></li>
-                        <li><a href="pages/home/">libraries ...</a></li>
-                        <li><a href="pages/home/">developers ...</a></li>
-                    </ul>
-                </div>
-            </div>
+        </div>
+        <div class="d-none d-lg-block">
+        <div class="intro-text">
+    <div>
+        <p><strong>International non profit society</strong> gathering 
+        edition projects, cultural heritage institutions, 
+        and individuals<br/><strong>Empower</strong> digital projects by promoting 
+        <strong>open standards</strong> and <strong>community collaboration</strong>.
+        Curious?</p>
+        <ul>
+            <li>
+                <a href="pages/home/" class="shortcut btn">
+                <img src="img/poet-svgrepo-com.svg" height="32">
+                <span>researchers</span>
+                </a>
+            </li>
+            <li>
+                <a href="pages/home/" class="shortcut btn">
+                    <img src="img/university-svgrepo-com.svg" height="32">
+                    <span>memory institutions</span>
+                </a>
+            </li>
+            <li>
+                <a href="pages/home/" class="shortcut btn">
+                    <img src="img/school-material-svgrepo-com.svg" height="32">
+                    <span>developers</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
         </div>
     </div>
 </div>
 <main class="container home">
+    <div class="d-lg-none">
+        <div class="intro-text">
+    <div>
+        <p><strong>International non profit society</strong> gathering 
+        edition projects, cultural heritage institutions, 
+        and individuals<br/><strong>Empower</strong> digital projects by promoting 
+        <strong>open standards</strong> and <strong>community collaboration</strong>.
+        Curious?</p>
+        <ul>
+            <li>
+                <a href="pages/home/" class="shortcut btn">
+                <img src="img/poet-svgrepo-com.svg" height="32">
+                <span>researchers</span>
+                </a>
+            </li>
+            <li>
+                <a href="pages/home/" class="shortcut btn">
+                    <img src="img/university-svgrepo-com.svg" height="32">
+                    <span>memory institutions</span>
+                </a>
+            </li>
+            <li>
+                <a href="pages/home/" class="shortcut btn">
+                    <img src="img/school-material-svgrepo-com.svg" height="32">
+                    <span>developers</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+    </div>
     <table>
   <thead>
     <tr>
