deploy: 583213e800cf6cd54581c469b62767edf4b3f8e4

--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -74,7 +74,7 @@
     <h1>Workshops</h1>
     <p>Meeting Room: <a href="https://meet.existsolutions.com/workshop">https://meet.existsolutions.com/workshop</a></p>
 <h3 id="upcoming-events" tabindex="-1">Upcoming Events <a class="direct-link" href="#upcoming-events" aria-hidden="true">#</a></h3>
-<p><img src="/img/pixel.gif" alt=""></p>
+<figure><img src="/img/pixel.gif" alt=""></figure>
 <h3 id="past-events" tabindex="-1">Past Events <a class="direct-link" href="#past-events" aria-hidden="true">#</a></h3>
 <h4 id="2021" tabindex="-1">2021 <a class="direct-link" href="#2021" aria-hidden="true">#</a></h4>
 <h5>2021-08-2021 Manuscript Mondays – Einführung in das digitale Edieren handschriftlicher Quellen (5-teilig)</h5>
@@ -82,7 +82,7 @@
 <p>Anne Diekjobst, Claudia Sutter</p>
 <p>Der Workshop richtet sich an Forschende aus verschiedenen Disziplinen, die ihre erste eigene digitale Edition erstellen wollen, die sich aber überfordert fühlen von der Fülle der verfügbaren Hilfsmittel, die online zu finden sind. Wir wollen eine niederschwellige Einführung für die ersten Schritte bieten, einen Mix aus Vortrag und Workshop vornehmen und uns die Zeit nehmen, individuelle Fragen und Probleme zusammen zu besprechen. Der Workshop bietet eine begleitete Einführung, bei der die Teilnehmenden viel Zeit haben, das Gehörte selbst anzuwenden. Ziel ist es, eine eigenständige digitale Edition in TEI/XML zu erstellen und im TEI Publisher darzustellen.</p>
 <h5>2021-03-30, 17.00 CEST Versioning and Archiving Data: TEI2Zenodo</h5>
-<p><img src="/img/tei2zenodo-300x147.png" alt=""></p>
+<figure><img src="/img/tei2zenodo-300x147.png" alt=""></figure>
 <p>Dr. Andreas Wagner, Digital Humanities, Max Planck Institute for Legal History and Legal Theory, Frankfurt</p>
 <p>How can I get Persistent Identifiers for the works of my digital edition? How can I deposit their TEI XML sources at a long-time archival repository? And how can I do all this when I don't have an affiliated institution/library taking care of it all? It's in response to questions as these that the &quot;TEI2Zenodo&quot;-Service offers a software (and, for the time being, a platform) that can facilitate archival and sustainable citation of your data. This workshop will introduce the platforms github and zenodo, and discuss the roles that they can play in such an endeavour. We will see and experiment with configurations for various ways of connecting them, particularly ones making use of the TEI2Zenodo service. After the workshop, participants should be capable of sustainably depositing the data of their digital edition, taking profit of free and open services and platforms.</p>
 <h5>2021-03-08 Beginners Workshop (Git, Editing Workflows)</h5>
