--- a/404.html
+++ b/404.html
@@ -114,9 +114,10 @@
         </div>
     </div>
 </div>
-<main class="container home">
-    <div class="d-lg-none">
-        <div class="intro-text">
+<main class="home">
+    <div class="container">
+        <div class="d-lg-none">
+            <div class="intro-text">
     <div>
         <p><strong>International non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
@@ -145,10 +146,11 @@
         </ul>
     </div>
 </div>
-    </div>
-    <h1 id="content-not-found" tabindex="-1">Content not found. <a class="direct-link" href="#content-not-found" aria-hidden="true">#</a></h1>
+        </div>
+        <h1 id="content-not-found" tabindex="-1">Content not found. <a class="direct-link" href="#content-not-found" aria-hidden="true">#</a></h1>
 <p>Go <a href="/11ty-homepage/">home</a>.</p>
 
+    </div>
 </main>
 
 <footer></footer>
