--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -114,9 +114,10 @@
         </div>
     </div>
 </div>
-<main class="container home">
-    <div class="d-lg-none">
-        <div class="intro-text">
+<main class="home">
+    <div class="container">
+        <div class="d-lg-none">
+            <div class="intro-text">
     <div>
         <p><strong>International non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
@@ -145,8 +146,8 @@
         </ul>
     </div>
 </div>
-    </div>
-    <table>
+        </div>
+        <table>
   <thead>
     <tr>
       <th>URL</th>
@@ -211,6 +212,18 @@
     <td>Tagged “verovio”</td>
   </tr>
   <tr>
+    <td><a href="/tags/feature/"><code>/tags/feature/</code></a></td>
+    <td>Tagged “feature”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/nlp/"><code>/tags/nlp/</code></a></td>
+    <td>Tagged “NLP”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/named-entity-recognition/"><code>/tags/named-entity-recognition/</code></a></td>
+    <td>Tagged “named entity recognition”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
     <td>Tagged “open-api”</td>
   </tr>
@@ -222,13 +235,10 @@
     <td><a href="/tags/semantic-encoding/"><code>/tags/semantic-encoding/</code></a></td>
     <td>Tagged “semantic-encoding”</td>
   </tr>
-  <tr>
-    <td><a href="/tags/vscode/"><code>/tags/vscode/</code></a></td>
-    <td>Tagged “vscode”</td>
-  </tr>
   </tbody>
 </table>
 
+    </div>
 </main>
 
 <footer></footer>
