--- a/page-list/index.html
+++ b/page-list/index.html
@@ -114,9 +114,10 @@
         </div>
     </div>
 </div>
-<main class="container home">
-    <div class="d-lg-none">
-        <div class="intro-text">
+<main class="home">
+    <div class="container">
+        <div class="d-lg-none">
+            <div class="intro-text">
     <div>
         <p><strong>International non profit society</strong> gathering 
         edition projects, cultural heritage institutions, 
@@ -145,8 +146,8 @@
         </ul>
     </div>
 </div>
-    </div>
-    <table>
+        </div>
+        <table>
   <thead>
     <tr>
       <th>URL</th>
@@ -237,6 +238,7 @@
   </tbody>
 </table>
 
+    </div>
 </main>
 
 <footer></footer>
