deploy: 5693b5dba37e722f1a374d1034e7b2b2ebb1681e

--- a/404.html
+++ b/404.html
@@ -151,7 +151,7 @@
     </div>
 </div>
         </div>
-        <h1 id="content-not-found" tabindex="-1">Content not found. <a class="direct-link" href="#content-not-found" aria-hidden="true">#</a></h1>
+        <h1>Content not found.</h1>
 <p>Go <a href="/11ty-homepage/">home</a>.</p>
 
     </div>
