--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -220,6 +220,10 @@
     <td>Names sell: Named entity recognition in TEI Publisher</td>
   </tr>
   <tr>
+    <td><a href="/posts/past-meetings/"><code>/posts/past-meetings/</code></a></td>
+    <td>Past Community Meetings</td>
+  </tr>
+  <tr>
     <td><a href="/posts/"><code>/posts/</code></a></td>
     <td></td>
   </tr>
@@ -234,10 +238,6 @@
   <tr>
     <td><a href="/tags/static/"><code>/tags/static/</code></a></td>
     <td>Tagged “static”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
-    <td>Tagged “annotations”</td>
   </tr>
   </tbody>
 </table>
