--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -160,6 +160,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/annotations/"><code>/tags/annotations/</code></a></td>
+    <td>Tagged “annotations”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/release/"><code>/tags/release/</code></a></td>
     <td>Tagged “release”</td>
   </tr>
@@ -208,6 +212,14 @@
     <td>Tagged “wordpress”</td>
   </tr>
   <tr>
+    <td><a href="/tags/events/"><code>/tags/events/</code></a></td>
+    <td>Tagged “events”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/meetups/"><code>/tags/meetups/</code></a></td>
+    <td>Tagged “meetups”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/feature/"><code>/tags/feature/</code></a></td>
     <td>Tagged “feature”</td>
   </tr>
@@ -220,24 +232,12 @@
     <td>Tagged “named entity recognition”</td>
   </tr>
   <tr>
-    <td><a href="/tags/events/"><code>/tags/events/</code></a></td>
-    <td>Tagged “events”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
     <td>Tagged “open-api”</td>
   </tr>
   <tr>
     <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
     <td>Tagged “mei”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
-    <td>Tagged “meetup”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/semantic-encoding/"><code>/tags/semantic-encoding/</code></a></td>
-    <td>Tagged “semantic-encoding”</td>
   </tr>
   </tbody>
 </table>
