--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -160,6 +160,14 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
+    <td>Tagged “meetup”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/semantic-encoding/"><code>/tags/semantic-encoding/</code></a></td>
+    <td>Tagged “semantic-encoding”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/vscode/"><code>/tags/vscode/</code></a></td>
     <td>Tagged “vscode”</td>
   </tr>
