--- a/pages/how-to-contribute/index.html
+++ b/pages/how-to-contribute/index.html
@@ -78,15 +78,15 @@
     
     <h1>How to Contribute</h1>
     <p>There are many way how you could support us and contribute:</p>
-<h2 id="source-code-on-github" tabindex="-1">Source Code on Github <a class="direct-link" href="#source-code-on-github" aria-hidden="true">#</a></h2>
+<h2>Source Code on Github</h2>
 <p>You can find the source code of the TEI Publisher and many examples on <a href="https://github.com/eeditiones">GitHub</a></p>
-<h2 id="translations-on-crowdin" tabindex="-1">Translations on Crowdin <a class="direct-link" href="#translations-on-crowdin" aria-hidden="true">#</a></h2>
+<h2>Translations on Crowdin</h2>
 <p>There are already a few translations of the TEI Publisher. If you could create a new translation or review an existing one, please go to <a href="https://crwd.in/tei-publisher">Crowdin</a> and help us to make the TEI Publisher even more international.</p>
-<h2 id="tei-examples" tabindex="-1">TEI Examples <a class="direct-link" href="#tei-examples" aria-hidden="true">#</a></h2>
+<h2>TEI Examples</h2>
 <p>To make the TEI Publisher as versatile as possible we are loocking for TEI examples which can be used for development, tests and also for teaching. The collection is hosted on <a href="https://github.com/eeditiones/tei-examples">GitHub</a>.</p>
-<h2 id="become-a-member" tabindex="-1">Become a Member <a class="direct-link" href="#become-a-member" aria-hidden="true">#</a></h2>
+<h2>Become a Member</h2>
 <p>If you made it to this point it could be a good idea to <a href="how-to-become-a-member">become a member of e-editiones</a>. It is fairly easy and we would be thrilled 😜.</p>
-<h2 id="e-editiones-logo" tabindex="-1">e-editiones Logo <a class="direct-link" href="#e-editiones-logo" aria-hidden="true">#</a></h2>
+<h2>e-editiones Logo</h2>
 <p>If you are a already a member of e-editiones you are encouraged to use our member Logo which you can grab on <a href="https://github.com/eeditiones/logos">GitHub</a>.</p>
 
 </main>
