--- a/pages/workshops/index.html
+++ b/pages/workshops/index.html
@@ -78,10 +78,10 @@
     
     <h1>Workshops</h1>
     <p>Meeting Room: <a href="https://meet.existsolutions.com/workshop">https://meet.existsolutions.com/workshop</a></p>
-<h3 id="upcoming-events" tabindex="-1">Upcoming Events <a class="direct-link" href="#upcoming-events" aria-hidden="true">#</a></h3>
+<h3>Upcoming Events</h3>
 <figure><img src="/img/pixel.gif" alt=""></figure>
-<h3 id="past-events" tabindex="-1">Past Events <a class="direct-link" href="#past-events" aria-hidden="true">#</a></h3>
-<h4 id="2021" tabindex="-1">2021 <a class="direct-link" href="#2021" aria-hidden="true">#</a></h4>
+<h3>Past Events</h3>
+<h4>2021</h4>
 <h5>2021-08-2021 Manuscript Mondays – Einführung in das digitale Edieren handschriftlicher Quellen (5-teilig)</h5>
 <p><strong><em>Workshop in German</em></strong></p>
 <p>Anne Diekjobst, Claudia Sutter</p>
@@ -96,7 +96,7 @@
 <li>Workflows for TEI Editing and App Development (Wolfgang Meier)</li>
 </ul>
 <p>A recording is available on the e-editiones <a href="https://www.youtube.com/watch?v=dyY539HzN6Q">youtube channel</a>.</p>
-<h4 id="2020" tabindex="-1">2020 <a class="direct-link" href="#2020" aria-hidden="true">#</a></h4>
+<h4>2020</h4>
 <h5>2020-08-29 Common eXist-db / TEI Publisher Deployment Scenarios</h5>
 <p>More Information: <a href="https://e-editiones.org/news/common-exist-db-tei-publisher-deployment-scenarios/">https://e-editiones.org/news/common-exist-db-tei-publisher-deployment-scenarios/</a></p>
 <h5>2020-06-08 «Stay Home Learn TEI Publisher From Scratch» A 3-part Online Course</h5>
