--- a/pages/statuten-des-vereins-e-editiones-german/index.html
+++ b/pages/statuten-des-vereins-e-editiones-german/index.html
@@ -78,39 +78,39 @@
     
     <h1>Statuten des Vereins e-editiones (German)</h1>
     <p>Revidierte Version vom 5. November 2020</p>
-<h2 id="art-1-name" tabindex="-1">Art. 1 Name <a class="direct-link" href="#art-1-name" aria-hidden="true">#</a></h2>
+<h2>Art. 1 Name</h2>
 <p>Unter dem Namen «e-editiones» besteht ein Verein im Sinne von Art. 60 ff. des schweizerischen Zivilgesetzbuches mit Sitz in St.Gallen.</p>
-<h2 id="art-2-vereinszweck" tabindex="-1">Art. 2 Vereinszweck <a class="direct-link" href="#art-2-vereinszweck" aria-hidden="true">#</a></h2>
+<h2>Art. 2 Vereinszweck</h2>
 <p>(1) Der Verein leistet einen Beitrag für die Erschliessung, Erhaltung und Vermittlung des Kulturerbes, indem er den fachlichen Austausch und die Förderung der Vernetzung und Standardisierung digitaler wissenschaftlicher Editionen sowie die Interessenvertretung digitaler Editionen verfolgt. Der Verein bemüht sich um die Qualitätssicherung und Qualitätsverbesserung mittels anerkannter technischer Standards sowie um die technische Pflege der Inhalte und ermöglicht die freie Nachnutzung zu wissenschaftlichen Zwecken.</p>
 <p>(2) Der Verein hat insbesondere folgende Aufgaben:<br>
 a) Förderung und Koordination von Entwicklungen im Open Source Bereich für wissen-schaftliche digitale Editionen b) Betrieb einer Informations- und Kommunikationsplattform für die Mitglieder c) Unterstützung von Editionsprojekten bei der dauerhaften Speicherung digitaler Daten und Zugänglichmachung digitaler Daten d) Beratung und Unterstützung von Editionsprojekten</p>
 <p>(3) Der Verein verfolgt keine kommerziellen Zwecke und erstrebt keinen Gewinn.</p>
-<h2 id="art-3-finanzierung" tabindex="-1">Art. 3 Finanzierung <a class="direct-link" href="#art-3-finanzierung" aria-hidden="true">#</a></h2>
+<h2>Art. 3 Finanzierung</h2>
 <p>(1) Zur Verfolgung des Vereinszwecks kann über folgende Mittel verfügt werden:</p>
 <p>a) Mitgliederbeiträge b) Zuwendungen, Spenden und Subventionen</p>
 <p>(2) Der volle Mitgliederbeitrag beträgt CHF 500.-. Für natürliche Personen gibt es einen ermässigten Mitgliederbeitrag von CHF 50.-.</p>
 <p>(3) Das Geschäftsjahr entspricht dem Kalenderjahr.</p>
-<h2 id="art-4-mitgliedschaft" tabindex="-1">Art. 4 Mitgliedschaft <a class="direct-link" href="#art-4-mitgliedschaft" aria-hidden="true">#</a></h2>
+<h2>Art. 4 Mitgliedschaft</h2>
 <p>(1) Mitglieder können juristische Personen und natürliche Personen werden, die den Vereinszweck unterstützen.</p>
 <p>(2) Aufnahmegesuche sind an den Vorstand zu richten, der die Aufnahme der Mitgliederversammlung vorschlägt.</p>
-<h2 id="art-5-erloeschen-der-mitgliedschaft" tabindex="-1">Art. 5 Erlöschen der Mitgliedschaft <a class="direct-link" href="#art-5-erloeschen-der-mitgliedschaft" aria-hidden="true">#</a></h2>
+<h2>Art. 5 Erlöschen der Mitgliedschaft</h2>
 <p>Die Mitgliedschaft erlischt durch Austritt, Ausschluss oder Auflösung der jeweiligen juristischen oder natürlichen Person.</p>
-<h2 id="art-6-austritt" tabindex="-1">Art. 6 Austritt <a class="direct-link" href="#art-6-austritt" aria-hidden="true">#</a></h2>
+<h2>Art. 6 Austritt</h2>
 <p>Der Austritt aus dem Verein ist jederzeit möglich und ist dem Vorstand schriftlich mitzuteilen. Für das laufende Jahr ist der volle Mitgliederbeitrag geschuldet.</p>
-<h2 id="art-7-ausschluss" tabindex="-1">Art. 7 Ausschluss <a class="direct-link" href="#art-7-ausschluss" aria-hidden="true">#</a></h2>
+<h2>Art. 7 Ausschluss</h2>
 <p>(1) Bei anhaltenden Verstössen gegen den Vereinszweck oder bei Nichterfüllen der Beitragspflicht kann ein Mitglied aus dem Verein ausgeschlossen werden.</p>
 <p>(2) Den Ausschlussentscheid kann die Mitgliederversammlung mit einfacher Mehrheit fällen. Das auszuschliessende Mitglied muss vorgängig angehört werden.</p>
-<h2 id="art-8-organe-des-vereins" tabindex="-1">Art. 8 Organe des Vereins <a class="direct-link" href="#art-8-organe-des-vereins" aria-hidden="true">#</a></h2>
+<h2>Art. 8 Organe des Vereins</h2>
 <p>Die Organe des Vereins sind:</p>
 <p>a) die Mitgliederversammlung b) der Vorstand c) die Revisionsstelle</p>
-<h2 id="art-9-die-mitgliederversammlung" tabindex="-1">Art. 9 Die Mitgliederversammlung <a class="direct-link" href="#art-9-die-mitgliederversammlung" aria-hidden="true">#</a></h2>
+<h2>Art. 9 Die Mitgliederversammlung</h2>
 <p>Das oberste Organ des Vereins ist die Mitgliederversammlung. In ihre Kompetenz fallen insbesondere:</p>
 <p>a) Entscheid über die Aufnahme von Neumitgliedern b) Genehmigung des Protokolls der letzten Mitgliederversammlung c) Genehmigung des Jahresberichts des Vorstands d) Entgegennahme des Revisionsberichts und Genehmigung der Jahresrechnung e) Entlastung des Vorstandes f) Wahl des Präsidenten, der weiteren Vorstandsmitglieder sowie der Revisionsstelle g) Genehmigung des Jahresbudgets h) Genehmigung des Tätigkeitsprogramms i) Beschlussfassung über Anträge des Vorstands und der Mitglieder j) Beschlussfassung über Änderung der Statuten k) Beschlussfassung über die Auflösung des Vereins und die Verwendung des - Vereinsvermögens</p>
-<h2 id="art-10-einberufung-der-mitgliederversammlung" tabindex="-1">Art. 10 Einberufung der Mitgliederversammlung <a class="direct-link" href="#art-10-einberufung-der-mitgliederversammlung" aria-hidden="true">#</a></h2>
+<h2>Art. 10 Einberufung der Mitgliederversammlung</h2>
 <p>(1) Eine ordentliche Mitgliederversammlung findet jährlich statt.</p>
 <p>(2) Zur Mitgliederversammlung werden die Mitglieder spätestens 10 Tage im Voraus schriftlich (Brief oder E-Mail) unter Angabe der Traktanden eingeladen.</p>
 <p>(3) Der Vorstand oder 1/5 der Mitglieder können jederzeit die Einberufung einer ausserordentlichen Mitgliederversammlung unter Angaben des Zwecks verlangen. Die Versammlung hat spätestens vier Wochen nach Eingang des Begehrens zu erfolgen.</p>
-<h2 id="art-11-stimmrecht-und-beschlussfassung" tabindex="-1">Art. 11 Stimmrecht und Beschlussfassung <a class="direct-link" href="#art-11-stimmrecht-und-beschlussfassung" aria-hidden="true">#</a></h2>
+<h2>Art. 11 Stimmrecht und Beschlussfassung</h2>
 <p>(1) Stimmberechtigt sind nur Mitglieder, die den vollen Mitgliederbeitrag leisten.</p>
 <p>(2) Jede ordnungsgemäss einberufene Mitgliederversammlung ist beschlussfähig, wenn 1/5 der stimmberechtigten Mitglieder daran teilnimmt.</p>
 <p>(3) Die stimmberechtigten Mitglieder fassen die Beschlüsse mit dem einfachen Mehr. Bei Stimmengleichheit fällt die/der Präsident/in den Stichentscheid.</p>
@@ -118,7 +118,7 @@ a) Förderung und Koordination von Entwicklungen im Open Source Bereich für wis
 <p>(5) Die Teilnahme an der Mitgliederversammlung ist auch per Telefon- oder Videokonferenz möglich.</p>
 <p>(6) Zirkularbeschlüsse sind zulässig.</p>
 <p>(7) Über die gefassten Beschlüsse ist ein Protokoll abzufassen.</p>
-<h2 id="art-12-vorstand" tabindex="-1">Art. 12 Vorstand <a class="direct-link" href="#art-12-vorstand" aria-hidden="true">#</a></h2>
+<h2>Art. 12 Vorstand</h2>
 <p>(1) Der Vorstand besteht aus mindestens drei Personen: Präsident/in, Schriftführer/in und Kassier/in. Die Amtszeit dauert zwei Jahre, wobei Wiederwahl möglich ist.</p>
 <p>(2) Der Vorstand konstituiert sich selbst.</p>
 <p>(3) Der Vorstand führt die laufenden Geschäfte und vertritt den Verein gegen aussen.</p>
@@ -126,18 +126,18 @@ a) Förderung und Koordination von Entwicklungen im Open Source Bereich für wis
 <p>(5) Die/der Präsident/in legt dem Vorstand und der Mitgliederversammlung Rechenschaft ab.</p>
 <p>(6) Der Vorstand kann für die Erreichung der Vereinsziele Dritte gegen eine angemessene Entschädigung anstellen oder beauftragen.</p>
 <p>(7) Zirkularbeschlüsse sind zulässig.</p>
-<h2 id="art-13-zeichnungsberechtigung" tabindex="-1">Art. 13 Zeichnungsberechtigung <a class="direct-link" href="#art-13-zeichnungsberechtigung" aria-hidden="true">#</a></h2>
+<h2>Art. 13 Zeichnungsberechtigung</h2>
 <p>Der Vorstand entscheidet über die Zeichnungsberechtigung seiner Mitglieder.</p>
-<h2 id="art-14-die-revisionsstelle" tabindex="-1">Art. 14 Die Revisionsstelle <a class="direct-link" href="#art-14-die-revisionsstelle" aria-hidden="true">#</a></h2>
+<h2>Art. 14 Die Revisionsstelle</h2>
 <p>(1) Die Mitgliederversammlung wählt zwei Rechnungsrevisoren/innen oder eine juristische Person, welche jährlich die Buchführung und die Jahresrechnung kontrollieren.</p>
 <p>(2) Die Revisionsstelle erstattet dem Vorstand zuhanden der Mitgliederversammlung Bericht.</p>
 <p>(3) Die Amtszeit dauert zwei Jahre, wobei Wiederwahl möglich ist.</p>
-<h2 id="art-15-haftung" tabindex="-1">Art. 15 Haftung <a class="direct-link" href="#art-15-haftung" aria-hidden="true">#</a></h2>
+<h2>Art. 15 Haftung</h2>
 <p>Für die Verbindlichkeiten des Vereins haftet ausschliesslich das Vereinsvermögen.</p>
-<h2 id="art-16-aufloesung-des-vereins" tabindex="-1">Art. 16 Auflösung des Vereins <a class="direct-link" href="#art-16-aufloesung-des-vereins" aria-hidden="true">#</a></h2>
+<h2>Art. 16 Auflösung des Vereins</h2>
 <p>(1) Zur Auflösung des Vereins bedarf es einer 2/3-Mehrheit der in einer Mitgliederversammlung anwesenden Mitglieder.</p>
 <p>(2) Bei einer Auflösung des Vereins fällt das Vereinsvermögen an eine nicht kommerzielle, steuerbefreite Organisation, welche den gleichen oder einen ähnlichen Zweck verfolgt. Die Verteilung des Vereinsvermögens unter den Mitgliedern ist ausgeschlossen.</p>
-<h2 id="art-17-inkrafttreten" tabindex="-1">Art. 17 Inkrafttreten <a class="direct-link" href="#art-17-inkrafttreten" aria-hidden="true">#</a></h2>
+<h2>Art. 17 Inkrafttreten</h2>
 <p>Diese Statuten wurden an der Gründungsversammlung vom 4. Mai 2020 angenommen und sind mit diesem Datum in Kraft getreten.</p>
 
 </main>
