deploy: 4384d1b83a47adecfeb8e9a56530bd15cdb5e970

--- a/page-list/1/index.html
+++ b/page-list/1/index.html
@@ -201,11 +201,11 @@
   </tr>
   <tr>
     <td><a href="/posts/call-for-proposals-big-prizes/"><code>/posts/call-for-proposals-big-prizes/</code></a></td>
-    <td>Call for Proposals $$$ Big Prizes $$$</td>
+    <td>Call for Proposals</td>
   </tr>
   <tr>
     <td><a href="/posts/tei-community-prize/"><code>/posts/tei-community-prize/</code></a></td>
-    <td>e-editiones receives 2021 TEI Community Prize</td>
+    <td>e-editiones receives TEI Community Prize</td>
   </tr>
   <tr>
     <td><a href="/posts/cultural-heritage-grant-ukraine/"><code>/posts/cultural-heritage-grant-ukraine/</code></a></td>
@@ -213,7 +213,7 @@
   </tr>
   <tr>
     <td><a href="/posts/newsletter-2022-1/"><code>/posts/newsletter-2022-1/</code></a></td>
-    <td>Newsletter 2022/1</td>
+    <td>Newsletter</td>
   </tr>
   <tr>
     <td><a href="/posts/names-sell-named-entity-recognition-in-tei-publisher/"><code>/posts/names-sell-named-entity-recognition-in-tei-publisher/</code></a></td>
