--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -172,6 +172,14 @@
     <td>Tagged “tei”</td>
   </tr>
   <tr>
+    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
+    <td>Tagged “awards”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
+    <td>Tagged “news”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/interoperability/"><code>/tags/interoperability/</code></a></td>
     <td>Tagged “interoperability”</td>
   </tr>
@@ -188,16 +196,8 @@
     <td>Tagged “grants”</td>
   </tr>
   <tr>
-    <td><a href="/tags/news/"><code>/tags/news/</code></a></td>
-    <td>Tagged “news”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/ukraine/"><code>/tags/ukraine/</code></a></td>
     <td>Tagged “ukraine”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/awards/"><code>/tags/awards/</code></a></td>
-    <td>Tagged “awards”</td>
   </tr>
   <tr>
     <td><a href="/tags/hugo/"><code>/tags/hugo/</code></a></td>
@@ -212,14 +212,6 @@
     <td>Tagged “wordpress”</td>
   </tr>
   <tr>
-    <td><a href="/tags/events/"><code>/tags/events/</code></a></td>
-    <td>Tagged “events”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/meetups/"><code>/tags/meetups/</code></a></td>
-    <td>Tagged “meetups”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/feature/"><code>/tags/feature/</code></a></td>
     <td>Tagged “feature”</td>
   </tr>
@@ -232,12 +224,20 @@
     <td>Tagged “named entity recognition”</td>
   </tr>
   <tr>
+    <td><a href="/tags/events/"><code>/tags/events/</code></a></td>
+    <td>Tagged “events”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/meetups/"><code>/tags/meetups/</code></a></td>
+    <td>Tagged “meetups”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
     <td>Tagged “open-api”</td>
   </tr>
   <tr>
-    <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
-    <td>Tagged “mei”</td>
+    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
+    <td>Tagged “meetup”</td>
   </tr>
   </tbody>
 </table>
