deploy: 320bd4df14b4ebd88224738194bcb46456385f1d

--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -212,6 +212,14 @@
     <td>Tagged “wordpress”</td>
   </tr>
   <tr>
+    <td><a href="/tags/events/"><code>/tags/events/</code></a></td>
+    <td>Tagged “events”</td>
+  </tr>
+  <tr>
+    <td><a href="/tags/meetups/"><code>/tags/meetups/</code></a></td>
+    <td>Tagged “meetups”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/feature/"><code>/tags/feature/</code></a></td>
     <td>Tagged “feature”</td>
   </tr>
@@ -224,20 +232,12 @@
     <td>Tagged “named entity recognition”</td>
   </tr>
   <tr>
-    <td><a href="/tags/events/"><code>/tags/events/</code></a></td>
-    <td>Tagged “events”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/meetups/"><code>/tags/meetups/</code></a></td>
-    <td>Tagged “meetups”</td>
-  </tr>
-  <tr>
     <td><a href="/tags/open-api/"><code>/tags/open-api/</code></a></td>
     <td>Tagged “open-api”</td>
   </tr>
   <tr>
-    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
-    <td>Tagged “meetup”</td>
+    <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
+    <td>Tagged “mei”</td>
   </tr>
   </tbody>
 </table>
