--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -160,8 +160,8 @@
   </thead>
   <tbody>
   <tr>
-    <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
-    <td>Tagged “mei”</td>
+    <td><a href="/tags/meetup/"><code>/tags/meetup/</code></a></td>
+    <td>Tagged “meetup”</td>
   </tr>
   <tr>
     <td><a href="/tags/semantic-encoding/"><code>/tags/semantic-encoding/</code></a></td>
